# Blog-Old

./: .gitignore  CONTRIBUTING.md  Makefile  NetlifyBuild.sh  Pipfile  README.md  build.sh  dev_publishconf.py  gulpfile.babel.js  gulpfile.js  netlify.toml  now.json  package-lock.json  package.json  pelicanconf.py  previewconf.py  publishconf.py  pyproject.toml  requirements.txt  tasks.py
.circleci/: config.yml
.github/workflows/: build_and_deploy.yml  main.yml  testing.yml
Flex/templates/: base.html
content/articles/: 2019-08-27-halo-dunia.md  2019-09-17-cara-install-git.md  2019-09-30-cara-install-lamp-stack.md  2019-10-20-cara-install-lamp-stack-di-ubuntu.md  2019-10-30-cara-install-lamp-stack-di-ubuntu.md  2019-10-31-cara-install-lamp-stack-di-ubuntu.md
content/artikel/: 2019-08-27-halo-dunia.md  2019-08-30-cara-saya-buat-blog-dengan-pelican-dan-netlify  2019-08-30-cara-saya-buat-blog-dengan-pelican-netlify-dan-cloudflare.md  2019-08-30-tentang-youtube-dl.md  2019-08-30-youtube-dl.md  2019-09-05-vscodium.md  2019-09-17-cara-install-git.md  tes-artikel-2.md  tes-artikel.md
content/extras/: BingSiteAuth.xml  CNAME  _headers  _redirects  ads.txt  copyrighted-d8d7be3e6f3ee7ab.html  custom.css  custom.js  custom.min.css  keybase.txt  robots.txt  robots_for_cdn.txt
content/halaman/: catatan-hukum.md  ketentuan-hukum-dan-sanggahan.md  kode-sumber.md  lisensi.md  sanggahan.md  tentang-saya.md
content/pages/: hubungi-saya.md  kebijakan-privasi.md  ketentuan-dan-kebijakan-blog.md  ketentuan-hukum-dan-sanggahan.md  kode-sumber.md  lisensi.md  tentang-saya.md
plugins/sitemap/: README.rst
static/stylesheet/: source-code-pro.css  source-code-pro.min.css  source-sans-pro.css  (+1 more)
templates/: article.html  base.html  index.html  page.html
(+26 files in other folders)
