[tool.poetry]
name = "farrelf-blog"
version = "0.1.0"
description = "Ini cuma Blog yang bukan apa-apanya bagi Python"
authors = ["Farrel Franqois <farrel@franqois.id>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
Babel = "*"
beautifulsoup4 = "*"
blinker = "*"
cffi = "*"
colorama = "*"
docutils = "*"
feedgenerator = "*"
gitdb2 = "*"
GitPython = "*"
invoke = "*"
Jinja2 = "*"
Markdown = "*"
MarkupSafe = "*"
pelican = "*"
pelican-extended-sitemap = "*"
pep562 = "*"
pycparser = "*"
Pygments = "*"
pymdown-extensions = "*"
python-dateutil = "*"
pytz = "*"
six = "*"
smmap2 = "*"
soupsieve = "*"
Unidecode = "*"
htmlmin = "*"
pelican-htmlmin = "*"

[tool.poetry.dev-dependencies]
astroid = "*"
pylint = "*"
lazy-object-proxy = "*"
mccabe = "*"
livereload = "*"
tornado = "*"
typed-ast = "*"
wrapt = "*"
isort = "*"
typogrify = "*"
smartypants = "*"
doc8 = "*"
restructuredtext-lint = "*"
chardet = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
