[tool.poetry]
name = "farrelf-blog"
version = "0.1.0"
description = "Ini cuma Blog yang bukan apa-apanya bagi Python"
authors = ["Farrel Franqois <farrel@franqois.id>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
Babel = "*"
beautifulsoup4 = "*"
cffi = "*"
colorama = "*"
GitPython = "*"
invoke = "*"
Markdown = "*"
pelican = "*"
pelican-extended-sitemap = "*"
pymdown-extensions = "*"
pelican-htmlmin = "*"

[tool.poetry.dev-dependencies]
pylint = "*"
livereload = "*"
typogrify = "*"
doc8 = "*"
autopep8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
